# document-equation-migration

./: .gitattributes  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  analyze_formula_risks.py  compare_pdf_visual.py  docx_math_object_map.py  ensure_mathtype_display_mode.py  export_word_pdf.ps1  extract_equation_native.py  inspect_docx_equations.py  inspect_ole_streams.py  normalize_mathml.py  probe_formula_pipeline.ps1  pyproject.toml  replace_docx_ole_with_omml.py  requirements-visual.txt  run_docx_open_source_pipeline.ps1
.github/: PULL_REQUEST_TEMPLATE.md
THIRD_PARTY_NOTICES/: MathType-MTEF-Tooling-NOTICE.txt
docs/: architecture.md  dependencies.md  dependency-inventory.zh-CN.md  equation3-evidence.md  limitations.md  mathtype-evidence.md  project-walkthrough.zh-CN.md  publishing-checklist.md  research-preview-release-notes.md
java_bridge/: Ole2XmlCli.java
patches/: mathtype_to_mathml-quality-fixes.patch
scripts/: bootstrap_third_party.ps1
tests/: test_axmath_ole_detector.py  test_canonical_mathml_evidence.py  test_canonical_target.py  test_cli.py  test_container_scan.py  test_docx_validation.py  test_equation3_mtef.py  test_equation3_public_fixtures.py  test_equation_editor_3_ole_detector.py  test_execution_plan.py  test_executor.py  test_executor_axmath.py  test_executor_equation3.py  test_executor_mathtype.py  test_executor_odf.py  test_executor_omml_validation.py  test_libreoffice_transformed_detector.py  test_manifest.py  test_mathtype_display_mode.py  test_mathtype_layout_preservation.py  (+9 more)
(+96 files in other folders)
